@@ -1,13 +1,13 @@
 AUX sun-jdk-1.6.env 925 RMD160 cac1306ba6dd05dcf74fb2e536bf40bd3f03bee1 SHA1 02587c415e0dffefdf8900fad5884d2bd604056c SHA256 8fd2d12405a41b923b3c64d56b9e42a89d2479323fd78703f2b065fb0ee7ec2b
 AUX sun-jdk-1.7.env 925 RMD160 f20078640a13176763381811e2050d0b9cd0ca1e SHA1 e2ef76e945eb3b4a34c4edfcf6376c58a54697b7 SHA256 95689b9bc21a9d571f556da0c6377c326bd2d24bc71f0b32f9bdc836c90cf581
-DIST jdk-6u10-rc-bin-b28-linux-amd64-21_jul_2008.bin 72613547 RMD160 ac45f6accb2fd69b4b3c9e0dff0684690d3167cf SHA1 3aee9997a2e6cc229d05111eb6af5e1912ec9977 SHA256 dce4c58793e9de3c377213eb442bdb9b173e04e8fff853fca761db65c642d2ec
-DIST jdk-6u10-rc-bin-b28-linux-i586-21_jul_2008.bin 79862715 RMD160 d4ac09c39b0f8d3ab6c2f669b42596582529fff7 SHA1 11b8effba855e6a4606683522d21db83b8b8b10f SHA256 f834dcc30a377645b9b24b328c06e97ca6dc0324ec75c23afb70243088a78d69
+DIST jdk-6u10-rc2-bin-b31-linux-amd64-05_sep_2008.bin 72621737 RMD160 3a123cb0f8d21742de736946610f41afefbb6108 SHA1 fbe8e0f68a85fa13410ea7c9b4b2b4d098f20e2c SHA256 428b36b5b8659c8bbc81670c5b8680b6d18c40de9dce2e65d425cf28f311cc31
+DIST jdk-6u10-rc2-bin-b31-linux-i586-05_sep_2008.bin 79875314 RMD160 c01e58f229e4826ff3ecc0209c505fc090432e45 SHA1 115238852d2a281b3475abe2e32eabad6d826f5c SHA256 84c449da2db871233f6bccb7cd7597a6a03d9ccbfa811cd08b4104691ebefdd4
 DIST jdk-7-ea-bin-b33-linux-i586-14_aug_2008.bin 61612532 RMD160 5fe967d1849d9573d5c35edf3f99dd8d4f978855 SHA1 12407ef925769b2e7ee9d9a9f09ea781cde2534e SHA256 f9020822160b58d27ec5d28d9d32ced9ce556baaaf96f2e8e694204cf9f40aa3
 DIST jdk-7-ea-bin-b33-linux-x64-14_aug_2008.bin 55186360 RMD160 05507884e00262252994eacccf0d4ddcc67c44e7 SHA1 f8a57172a7e908e2133b557db97118c949596ad3 SHA256 d9b71fc06c64ce8c7687004d5a9873a6b13b39faa5bd16b4c3ad5f2e16a98e90
 DIST jdk-7-ea-bin-b34-linux-i586-28_aug_2008.bin 61722011 RMD160 7ba80a158b7a11c9afadf9455a4542700e8356b6 SHA1 95603644aecf2374067807c59ceb14a18aab67f5 SHA256 de413e10630743cf87844f06990464ef861edc5e803d28633fdadefb1d6d072c
 DIST jdk-7-ea-bin-b34-linux-x64-28_aug_2008.bin 55309048 RMD160 010f4eda6960ba069cfd8bbb07293efbe0cc9892 SHA1 ca0fdbef4eba6589af1c9aa759f3261ef5f620f6 SHA256 ef08ee39a6141646fdff2bb12325905f749a012907c56974428216e89fd19863
-EBUILD sun-jdk-1.6.0.10_beta28.ebuild 5120 RMD160 4ed419075c8b8fb295d6344501496ee66ad2fce1 SHA1 f74b2c3167bc0e9e2cd6a59a11a9a8ab068c35b8 SHA256 0136d29ed8c7de3e997879ad80f32287333c25cee11b4fdc0b5c5fb657a149fa
+EBUILD sun-jdk-1.6.0.10_beta31.ebuild 5122 RMD160 b103b839a3437b14c124e1c33341ad930a430788 SHA1 c6ef59206537934046049ac2fe2635a0593bbb99 SHA256 4a85e58ed8df5d46be9fad9ec9de81e1a1cff81a395871b029c0b15b6b6d514e
 EBUILD sun-jdk-1.7.0.0_alpha33.ebuild 4680 RMD160 68a401836dba39c72ad250a8def0af3c041771d2 SHA1 5e0eb088262a35d467a24ff38f045277fcde54dd SHA256 8edc86b98dcb0fa3754ea47f3f3ce2e4362f162229040f6732850036522a9c81
 EBUILD sun-jdk-1.7.0.0_alpha34.ebuild 4669 RMD160 61cd558cae7b131a8ff5225212b4e1c54b1498bb SHA1 8e31d667d645f152cb65c400d10912ca4cc89337 SHA256 ea1403691154acf1eb0367379dd35ebddfeede2a5ce68735c2faddc01ba87511
-MISC ChangeLog 7992 RMD160 3d080b0ff902adffe0ae41f2414fbea414fafac0 SHA1 59ee96f95474d85baf3bba9e62c8da9f588c98dc SHA256 525a9fabbef09ae2dfc5ee95ee3340d33629d32e0b052f8f3200800cf4f877b4
+MISC ChangeLog 8162 RMD160 9187afd0673c7518fa3bb78a3488abbf77833a7e SHA1 b9fae1e339d90c7712fc273cea8c1f74829b14d0 SHA256 01aca56b4c806ceaad7bb66edec11a9fd826ed4f133bd6f26bcc9a5c6939b08e
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
