@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sun-jdk-1.6.0.10_beta31 (10 Sep 2008)
+
+  10 Sep 2008; Fabian Fingerle <fabian@datensalat.eu>
+  +sun-jdk-1.6.0.10_beta31.ebuild -sun-jdk-1.6.0.10_beta28.ebuild:
+  Bump.
+
 *sun-jdk-1.7.0.0_alpha34 (31 Aug 2008)
 
   31 Aug 2008; Fabian Fingerle <fabian@datensalat.eu>
